fixes scroll issue on mobile by removing padding on main

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,7 +39,6 @@ body {
 main {
   background-color: var(--dark-primary);
   margin: 0 auto;
-  padding: 1rem;
   display: grid;
   grid-template-rows: 15% 60% 25%;
   grid-template-areas: "nav" "text" "buttons";
@@ -84,7 +83,7 @@ img {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  background-color: rgba(60, 60, 60, 0.9);
+  background-color: rgba(60, 60, 60, 0.75);
   padding: 2rem 4rem;
   border-radius: 12px;
   max-width: 600px;
@@ -98,7 +97,6 @@ img {
 
 .got-blackjack {
   color: var(--accent);
-  text-transform: uppercase;
 }
 
 #new-deck {
